# GL

./: CMakeLists.txt
res/shaders/: Basic.shader
src/: .gitignore  App.cpp  IndexBuffer.cpp  IndexBuffer.h  Makefile  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  app  camera.cpp  camera.h  try.cpp
src/common/: renderer.cpp  renderer.h  shaderHandler.cpp  shaderHandler.h
src/glm/: CTestTestfile.cmake  cmake_install.cmake
src/objects/: indexBuffer.cpp  indexBuffer.h  vao.cpp  vao.h  vertexBuffer.cpp  vertexBuffer.h
src/shader/: first.fragmentShader  first.vertexShader  light.vertexShader  shader.h
src/shaders/: first.fragmentShader  first.vertexShader  test.vertexShader
